# nanoc

./: .gitattributes  .gitignore  .gitmodules  11_struct_with_array.ll  AGENTS.md  Cargo.toml  Makefile.toml  README.md  TODO.md  package-lock.json
.github/: copilot-instructions.md
.github/workflows/: rust.yml
crates/airyc-analyzer/: Cargo.toml
crates/airyc-codegen/: Cargo.toml
crates/airyc-parser/: Cargo.toml
crates/airyc-runtime/: Cargo.toml
crates/airyc-test/: Cargo.toml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: analyze.rs  array.rs  checker.rs  error.rs  header.rs  lib.rs  module.rs  project.rs  test.rs  type.rs  utils.rs  value.rs
crates/analyzer/src/analyze/: decl.rs  expr.rs  func.rs  stmt.rs  type.rs
crates/analyzer/src/checker/: recursive_type.rs
crates/analyzer/src/snapshots/: analyzer__array__test__normal_array.snap  analyzer__array__test__special_array.snap
crates/codegen/: Cargo.toml
crates/codegen/src/: compiler.rs  error.rs  lib.rs  llvm_ir.rs  test.rs  utils.rs
crates/codegen/src/llvm_ir/: decl.rs  expr.rs  func.rs  stmt.rs
crates/codegen/src/snapshots/: airyc_codegen__test__array_initialize.snap  airyc_codegen__test__complex_program.snap  airyc_codegen__test__const_init.snap  airyc_codegen__test__if_stmt.snap  airyc_codegen__test__return_stmt.snap  codegen__test__array_initialize.snap  codegen__test__complex_program.snap  codegen__test__const_init.snap  codegen__test__expr_stmt.snap  codegen__test__func_call.snap  codegen__test__if_stmt.snap  codegen__test__return_stmt.snap
crates/language_server/: Cargo.toml
crates/language_server/src/: airyc_ls.rs  backend.rs  document.rs  error.rs  lsp_features.rs  main.rs  utils.rs
crates/language_server/src/lsp_features/: diagnostics.rs  goto_definition.rs  hover.rs  references.rs  semantic_tokens.rs
crates/language_server/src/lsp_features/completion/: keyword.rs
crates/language_server/src/utils/: get_at_position.rs  line_index.rs  position_into.rs  position_trans.rs
crates/lexer/: Cargo.toml
crates/line_index/: Cargo.toml
crates/nanoc-analyzer/: Cargo.toml
crates/nanoc-codegen/: Cargo.toml
crates/nanoc-ir/: Cargo.toml
crates/nanoc-parser/: Cargo.toml
crates/nanoc-runtime/: Cargo.toml
crates/parser/: Cargo.toml
crates/runtime/: Cargo.toml  build.rs
crates/syntax/: Cargo.toml
crates/tools/: Cargo.toml
crates/utils/: Cargo.toml
crates/vfs/: Cargo.toml
editor/code/: .vscodeignore  build-server.sh  language-configuration.json  package-lock.json  package.json
example/calculator/: README.md  ast.airy  calculator.airy  eval.airy  lexer.airy  parser.airy  stdlib.airy  test.airy
example/fs/: README.md  fs.airy  stdlib.airy
manual/: ebnf.txt  grammar.md
reference/: grammar.typ
src/: analyzing.rs  cli.rs  codegen.rs  error.rs  linking.rs  main.rs  parsing.rs
src/nanoc-compiler/: Cargo.toml
test/: test.sh
test/pointer_tests/: 02_address_of.c  06_int_ptr_const.c  12_addr_of_deref.c  13_ptr_array_index.c  20_ptr_complex_expr.c  22_runtime_const_ptr_diff.c
test/struct/: 01_basic_struct.c  04_struct_func_param.c  06_struct_array.c  07_mixed_access.c  08_const_struct_init.c  09_runtime_struct_init.c  10_func_return_struct_ptr.c  11_struct_with_array.c  22_deep_nested_struct_init.c  23_linked_list_style.c  24_struct_with_ptr_array.c  25_mixed_init.c  28_struct_with_2d_array.c
testcases/: implicit_cast.airy  implicit_cast.out
testcases/arrays/: 00_local_arr_1d.airy  01_local_arr_nd.airy  02_global_arr.airy  02_global_arr.out  03_arr_init_1d.airy  04_arr_init_nd.airy  04_arr_init_nd.out  05_global_arr_init.airy  07_const_array.airy  08_arr_access.airy  08_arr_access.out  09_const_arr_read.airy  09_const_arr_read.out  10_arr_in_loop.airy  10_arr_in_loop.out  11_arr_params.airy  12_more_arr_params.airy  12_more_arr_params.out  13_complex_arr_params.airy  13_complex_arr_params.out  14_arr_lib_funcs.airy  14_arr_lib_funcs.out  15_sort1.airy  16_sort2.airy  16_sort2.out  17_sort3.airy  18_sort4.airy  19_sort5.airy  20_sort6.airy  21_sort7.airy  21_sort7.out
testcases/basic/: 0_main.airy  1_comments.airy  2_int_dec.airy  2_int_dec.out  3_int_oct.airy  3_int_oct.out  4_int_hex.airy  4_int_hex.out  5_compact.airy  6_whitespaces.airy
testcases/control_flow_if/: 0_if.airy  1_if_else.airy  2_multiple_if_else.out  4_logical.out  5_more_logical.airy  6_multiple_returns.airy  7_complex.airy  7_complex.out
testcases/control_flow_while/: 00_while.airy  01_while_pow.airy  01_while_pow.out  02_while_false.airy  03_while_true.airy  04_while_if.airy  05_if_while.airy  05_if_while.out  06_nested_while.airy  06_nested_while.out  07_break.airy  08_if_break.airy  09_continue.airy  09_continue.out  10_if_continue.airy  10_if_continue.out  11_complex.airy
testcases/expressions/: 00_pos.airy  01_neg_0.airy  02_neg_2.airy  02_neg_2.out  03_neg_max.airy  04_not_0.airy  05_not_10.airy  06_complex_unary.airy  07_add.airy  08_add_neg.airy  09_sub.airy  09_sub.out  10_sub_neg.airy  11_mul.airy  12_mul_neg.airy  12_mul_neg.out  13_div.airy  13_div.out  14_div_neg.airy  14_div_neg.out  15_mod.airy  16_mod_neg.airy  17_lt.airy  18_gt.airy  19_le.airy  20_ge.airy  21_eq.airy  22_ne.airy  23_lor.airy  24_land.airy  25_int_min.airy  25_int_min.out  26_parentheses.airy  27_complex_binary.airy  27_complex_binary.out  const_fold_basic.airy  const_fold_basic.out  const_fold_composite.airy  const_fold_composite.out  const_fold_edge_cases.airy  (+2 more)
testcases/functions/: 00_int_func.airy  01_void_func.airy  02_params.airy  02_params.out  03_more_params.airy  03_more_params.out  04_param_name.airy  05_func_name.airy  06_complex_call.airy  07_recursion.airy  07_recursion.out  08_lib_funcs.airy  08_lib_funcs.out  09_globals.airy  09_globals.out  10_complex.airy  10_complex.out  11_short_circuit.airy  11_short_circuit.out
testcases/performance/: 00_bitset1.out  01_bitset2.out  02_bitset3.airy  02_bitset3.out  03_mm1.out  04_mm2.airy  04_mm2.out  05_mm3.out  06_mv1.out  07_mv2.airy  07_mv2.out  08_mv3.out  09_spmv1.out  10_spmv2.airy  10_spmv2.out  11_spmv3.out  12_fft0.out  13_fft1.out  (+10 more)
(+309 files in other folders)
