[package]
name = "airyc-compiler"
version.workspace = true
edition.workspace = true

[workspace]
members = [
    "crates/lexer",
    "crates/syntax",
    "crates/codegen",
    "crates/analyzer",
    "crates/parser",
    "crates/runtime",
    "crates/test",
    "crates/language_server", 
    "crates/utils", "crates/tools", 
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
logos = "0.15.1"
text-size = "1.1.1"
thiserror = "2.0.17"
rowan = "0.16.1"
insta = "1.44.3"
inkwell = { version = "0.7.1", features = ["llvm21-1"] }
thunderdome = "0.6.1"
# smol_str = "0.3.4"
anyhow = "1.0"
clap = { version = "4.5.54", features = ["derive"] }

syntax = { path = "crates/syntax" }
lexer = { path = "crates/lexer" }
parser = { path = "crates/parser" }
codegen = { path = "crates/codegen" }
analyzer = { path = "crates/analyzer" }
tools = {path = "crates/tools"}
utils = { path = "crates/utils" }

[dependencies]
parser.workspace = true
codegen.workspace = true
analyzer.workspace = true
inkwell.workspace = true
anyhow.workspace = true
clap.workspace = true
