[workspace]
members = [
    "crates/lexer",
    "crates/syntax",
    "crates/codegen",
    "crates/analyzer",
    "crates/parser",
    "crates/utils", 
    "crates/tools",
    "crates/vfs", 
    "bin/test",
    "bin/language_server", 
    "bin/cli", 
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
logos = "0.15.1"
text-size = "1.1.1"
thiserror = "2.0.17"
rowan = "0.16.1"
insta = "1.44.3"
inkwell = { version = "0.7.1", features = ["llvm21-1-prefer-dynamic"] }
thunderdome = "0.6.1"
anyhow = "1.0"
clap = { version = "4.5.54", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
snailquote = "0.3.1"

# language server
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.1.0"
tower-lsp-server = "0.23.0"
parking_lot = "0.12.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

syntax = { path = "crates/syntax" }
lexer = { path = "crates/lexer" }
parser = { path = "crates/parser" }
codegen = { path = "crates/codegen" }
analyzer = { path = "crates/analyzer" }
tools = {path = "crates/tools"}
utils = { path = "crates/utils" }
vfs = { path = "crates/vfs" }

[profile.release]
lto = true
opt-level = 2 
strip = true
