[package]
name = "analyzer"
version.workspace = true
edition.workspace = true

[dependencies]
parser.workspace = true
syntax.workspace = true
tools.workspace = true
utils.workspace = true

thunderdome.workspace = true
insta.workspace = true
rowan.workspace = true
thiserror.workspace = true
miette.workspace = true
