[package]
name = "codegen"
version.workspace = true
edition.workspace = true

[dependencies]
parser.workspace = true
analyzer.workspace = true
utils.workspace = true
syntax.workspace = true
tools.workspace = true

inkwell.workspace = true
rowan.workspace = true
insta.workspace = true
thiserror.workspace = true

[dev-dependencies]
thunderdome.workspace = true
