[package]
name = "language_server"
version.workspace = true
edition.workspace = true

[dependencies]
syntax.workspace = true
lexer.workspace = true
parser.workspace = true
analyzer.workspace = true
tools.workspace = true
vfs.workspace = true

logos.workspace = true
thiserror.workspace = true
rowan.workspace = true
miette.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
tower-lsp-server.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
